--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cross-env": "^7.0.2",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.4",
+    "joi": "^17.3.0",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
