--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "form-data": "^3.0.0",
     "got": "^11.8.0",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.2.4",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
